# phosphor-dbus-interfaces

./: .editorconfig  .gitignore  0001-Cable-Chassis-Add-associations-documentation.patch  0001-Metric-Event-phosphor-dbus-interfaces.patch  MAINTAINERS  Makefile.am  Makefile.error.yaml.in  Makefile.interface.yaml.in  OWNERS  README.md  README_logging.md  argument.cpp  argument.hpp  configure.ac  controller.cpp  gen-meson.sh  gen.sh  generate_error_yaml_makefile.sh  generate_interface_yaml_makefile.sh  generate_makefile.sh  generate_yaml_makefile.sh  groups  led-main.cpp  led-manager.cpp  led-manager.hpp  meson.build  meson.options  meson_options.txt  out  phosphor-dbus-interfaces.pc.in  physical.cpp  physical.hpp  project.config  requirements.md  server.hpp  xyz.openbmc_project.Led.Group.cpp  xyz.openbmc_project.Led.Physical.cpp
com/ibm/: VPD.errors.yaml  meson.build  vpd.errors.yaml  vpd.metadata.yaml
com/ibm/Dump/: Create.interface.yaml
com/ibm/Host/: Source.interface.yaml  VMICertificate.interface.yaml
com/ibm/HypervisorCertificate/: CreateHypervisorCSREntry.interface.yaml  Entry.interface.yaml
com/ibm/Led/: LampTest.interface.yaml
com/ibm/Logging/: meson.build
com/ibm/VMICertificate/: CreateCSR.yaml  Entry.Interface.yaml  Entry.interface.yaml  VMICreateCSREntry.interface.yaml  VMICreateCSREntry.yaml
com/ibm/VPD/: Manager.interface.yaml  meson.build
com/ibm/host/: VMICertificate.interface.yaml
com/ibm/ipzvpd/: CP00.interface.yaml  CRP0.interface.yaml  DINF.interface.yaml  LRP0.interface.yaml  LRP1.interface.yaml  LRP2.interface.yaml  LRP3.interface.yaml  LRP4.interface.yaml  LRP5.interface.yaml  LRP6.interface.yaml  LWP0.interface.yaml  LWP1.interface.yaml  LWP2.interface.yaml  LWP3.interface.yaml  LWP6.interface.yaml  LXR0.interface.yaml  Location.interface.yaml  MER0.interface.yaml  README.md  UTIL.interface.yaml  VCEN.interface.yaml  VCFG.interface.yaml  VEIR.interface.yaml  VER0.interface.yaml  VINI.interface.yaml  VMPU.interface.yaml  VMSC.interface.yaml  VPRI.interface.yaml  VR10.interface.yaml  VRML.interface.yaml  VRTN.interface.yaml  VSBP.interface.yaml  VSRC.interface.yaml  VSYS.interface.yaml  VW10.interface.yaml  VWML.interface.yaml  meson.build
com/ibm/kwvpd/: KWVPD.interface.yaml
com/ibm/vpd/: Editor.interface.yaml  Manager.interface.yaml
com/ibm/vpdEditor/: Editor.interface.yaml
com/ibm/vpdKwdEditor/: VPDKeywordEditor.interface.yaml
org/open_power/: meson.build
org/open_power/Common/: meson.build
org/open_power/Control/: meson.build
org/open_power/HardwareIsolation/: Create.interface.yaml  Entry.interface.yaml
org/open_power/Host/: meson.build
org/open_power/Inventory/: meson.build
org/open_power/Logging/: PEL.interface.yaml  meson.build
org/open_power/Network/: VMICertificate.interface.yaml
org/open_power/OCC/: PassThrough.interface.yaml  meson.build
org/open_power/Proc/: meson.build
org/open_power/Sensor/: meson.build
xyz/openbmc_project/: Association.interface.yaml  AssociationDefinitions.interface.yaml  Associations.interface.yaml  Bmc.interface.yaml  Certs.errors.yaml  Collection.interface.yaml  Common.errors.yaml  Common.metadata.yaml  Dump.interface.yaml  Host.interface.yaml  Intrusion.interface.yaml  Inventory.errors.yaml  Inventory.metadata.yaml  ObjectMapper.interface.yaml  State.errors.yaml  State.metadata.yaml  Time.metadata.yaml  TimedPowerOn.errors.yaml  TimedPowerOn.metadata.yaml  meson.build
xyz/openbmc_project/Association/: Definitions.yaml  Managed.interface.yaml  meson.build
xyz/openbmc_project/BIOSConfig/: BIOSConfigMgr.interface.yaml  Common.errors.yaml  Common.metadata.yaml  Manager.interface.yaml  Password.interface.yaml  Payload.interface.yaml  README.md
xyz/openbmc_project/Cable/: State.interface.yaml
xyz/openbmc_project/Certificate/: README.md
xyz/openbmc_project/Certs/: Activate.errors.yaml  Activate.interface.yaml  Authority.interface.yaml  Certificate.interface.yaml  Entry.interface.yaml  Install.errors.yaml  Install.interface.yaml  Manager.interface.yaml  README.md  Replace.errors.yaml  Replace.interface.yaml  meson.build
xyz/openbmc_project/Channel/: ChannelAccess.interface.yaml  meson.build
xyz/openbmc_project/Chassis/: Common.errors.yaml  Intrusion.interface.yaml  README.md  meson.build
xyz/openbmc_project/Collection/: meson.build
xyz/openbmc_project/Common/: Association.interface.yaml  Bmc.errors.yaml  Bmc.metadata.yaml  Callout.errors.yaml  Callout.metadata.yaml  Common.errors.yaml  Common.metadata.yaml  Device.errors.yaml  Enablement.interface.yaml  FactoryReset.Interface.yaml  FactoryReset.errors.yaml  FactoryReset.interface.yaml  FactoryReset.metadata.yaml  File.errors.yaml  File.metadata.yaml  ObjectMapper.interface.yaml  ObjectPath.interface.yaml  Progress.interface.yaml  TFTP.errors.yaml  TFTP.interface.yaml  TFTP.metadata.yaml  UUID.interface.yaml  meson.build
xyz/openbmc_project/Condition/: Host.interface.yaml
xyz/openbmc_project/Control/: ChassisCapabilities.interface.yaml  Device.errors.yaml  Device.metadata.yaml  FanPwm.interface.yaml  FanSpeed.interface.yaml  FieldMode.interface.yaml  Host.interface.yaml  MinimumShipLevel.errors.yaml  MinimumShipLevel.interface.yaml  MinimumShipLevel.metadata.yaml  Mode.interface.yaml  OCOTShutdownPolicy.interface.yaml  PowerSupply.interface.yaml  PowerSupplyAttributes.interface.yaml  PowerSupplyRedundancy.interface.yaml  README.msl.md  ShutdownPolicy.interface.yaml  Thermal.interface.yaml  ThermalMode.interface.yaml  TimedPowerOn.interface.yaml  TurboAllowed.interface.yaml  VoltageRegulatorControl.interface.yaml  VoltageRegulatorProfile.interface.yaml  meson.build
xyz/openbmc_project/Cpu/: CpuErr.errors.yaml  CpuErr.interface.yaml
xyz/openbmc_project/Dump/: BMC.interface.yaml  Common.errors.yaml  Common.metadata.yaml  Create.errors.yaml  Create.interface.yaml  Create.metadata.yaml  Create2.interface.yaml  Dump.interface.yaml  Entry.errors.yaml  Entry.interface.yaml  Entry.metadata.yaml  Manager.interface.yaml  NewDump.interface.yaml  Progress.interface.yaml  UserInitiated.interface.yaml  meson.build
(+1387 files in other folders)
