option('generate_md', type: 'boolean', value: true)
option('libphosphor_dbus', type: 'boolean', value: true)
option('data_com_google', type: 'boolean', value: true)
option('data_com_ibm', type: 'boolean', value: true)
option('data_com_intel', type: 'boolean', value: true)
option('data_com_meta', type: 'boolean', value: true)
option('data_com_ampere', type: 'boolean', value: true)
option('data_org_freedesktop', type: 'boolean', value: true)
option('data_org_open_power', type: 'boolean', value: true)
option('data_xyz_openbmc_project', type: 'boolean', value: true)
