subdir('Common')
subdir('Association')
subdir('ScheduledTime')
subdir('Time')
subdir('Certs')
subdir('ObjectMapper')
subdir('Inventory')
subdir('State')
subdir('VirtualMedia')
subdir('Led')
subdir('Network')
subdir('Logging')
subdir('Chassis')
subdir('Sensor')
subdir('Dump')
subdir('Memory')
subdir('Object')
subdir('Nvme')
subdir('Collection')
subdir('Ipmi')
subdir('User')
subdir('PFR')
subdir('PLDM')
subdir('Channel')
subdir('Software')
subdir('Control')
subdir('Smbios')
