_sdbusplus_com_ibm_ipzvpd_VCEN_md = []
_sdbusplus_com_ibm_ipzvpd_VSRC_md = []
_sdbusplus_com_ibm_ipzvpd_MER0_md = []
_sdbusplus_com_ibm_ipzvpd_VSYS_md = []
_sdbusplus_com_ibm_ipzvpd_VRTN_md = []
_sdbusplus_com_ibm_ipzvpd_VW10_md = []
_sdbusplus_com_ibm_ipzvpd_VMPU_md = []
_sdbusplus_com_ibm_ipzvpd_UTIL_md = []
_sdbusplus_com_ibm_ipzvpd_DINF_md = []
_sdbusplus_com_ibm_ipzvpd_VINI_md = []
_sdbusplus_com_ibm_ipzvpd_VMSC_md = []
_sdbusplus_com_ibm_ipzvpd_VSBP_md = []
_sdbusplus_com_ibm_ipzvpd_Location_md = []
_sdbusplus_com_ibm_ipzvpd_VER0_md = []
_sdbusplus_com_ibm_ipzvpd_VEIR_md = []
_sdbusplus_com_ibm_ipzvpd_VR10_md = []
_sdbusplus_com_ibm_ipzvpd_LXR0_md = []
_sdbusplus_com_ibm_ipzvpd_VPRI_md = []
_sdbusplus_com_ibm_ipzvpd_VCFG_md = []
subdir('UTIL')
subdir('Location')
subdir('VSRC')
subdir('VINI')
subdir('VCFG')
subdir('VEIR')
subdir('VW10')
subdir('VMPU')
subdir('VSBP')
subdir('VSYS')
subdir('DINF')
subdir('LXR0')
subdir('VER0')
subdir('VPRI')
subdir('VMSC')
subdir('MER0')
subdir('VR10')
subdir('VCEN')
subdir('VRTN')

custom_target(
  'VCEN.md',
  output: 'VCEN.md',
  input: _sdbusplus_com_ibm_ipzvpd_VCEN_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/VCEN.md')

custom_target(
  'VSRC.md',
  output: 'VSRC.md',
  input: _sdbusplus_com_ibm_ipzvpd_VSRC_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/VSRC.md')

custom_target(
  'MER0.md',
  output: 'MER0.md',
  input: _sdbusplus_com_ibm_ipzvpd_MER0_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/MER0.md')

custom_target(
  'VSYS.md',
  output: 'VSYS.md',
  input: _sdbusplus_com_ibm_ipzvpd_VSYS_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/VSYS.md')

custom_target(
  'VRTN.md',
  output: 'VRTN.md',
  input: _sdbusplus_com_ibm_ipzvpd_VRTN_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/VRTN.md')

custom_target(
  'VW10.md',
  output: 'VW10.md',
  input: _sdbusplus_com_ibm_ipzvpd_VW10_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/VW10.md')

custom_target(
  'VMPU.md',
  output: 'VMPU.md',
  input: _sdbusplus_com_ibm_ipzvpd_VMPU_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/VMPU.md')

custom_target(
  'UTIL.md',
  output: 'UTIL.md',
  input: _sdbusplus_com_ibm_ipzvpd_UTIL_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/UTIL.md')

custom_target(
  'DINF.md',
  output: 'DINF.md',
  input: _sdbusplus_com_ibm_ipzvpd_DINF_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/DINF.md')

custom_target(
  'VINI.md',
  output: 'VINI.md',
  input: _sdbusplus_com_ibm_ipzvpd_VINI_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/VINI.md')

custom_target(
  'VMSC.md',
  output: 'VMSC.md',
  input: _sdbusplus_com_ibm_ipzvpd_VMSC_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/VMSC.md')

custom_target(
  'VSBP.md',
  output: 'VSBP.md',
  input: _sdbusplus_com_ibm_ipzvpd_VSBP_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/VSBP.md')

custom_target(
  'Location.md',
  output: 'Location.md',
  input: _sdbusplus_com_ibm_ipzvpd_Location_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/Location.md')

custom_target(
  'VER0.md',
  output: 'VER0.md',
  input: _sdbusplus_com_ibm_ipzvpd_VER0_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/VER0.md')

custom_target(
  'VEIR.md',
  output: 'VEIR.md',
  input: _sdbusplus_com_ibm_ipzvpd_VEIR_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/VEIR.md')

custom_target(
  'VR10.md',
  output: 'VR10.md',
  input: _sdbusplus_com_ibm_ipzvpd_VR10_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/VR10.md')

custom_target(
  'LXR0.md',
  output: 'LXR0.md',
  input: _sdbusplus_com_ibm_ipzvpd_LXR0_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/LXR0.md')

custom_target(
  'VPRI.md',
  output: 'VPRI.md',
  input: _sdbusplus_com_ibm_ipzvpd_VPRI_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/VPRI.md')

custom_target(
  'VCFG.md',
  output: 'VCFG.md',
  input: _sdbusplus_com_ibm_ipzvpd_VCFG_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'com/ibm/ipzvpd/VCFG.md')
